--- a/.fluxbox/styles/mars/theme.cfg
+++ b/.fluxbox/styles/mars/theme.cfg
@@ -1,5 +1,5 @@
 !
-! fluxbox style - template
+! fluxbox style - mars
 ! created by PackRat
 ! creation date - 06-11-2018
 !
@@ -14,7 +14,7 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Sans-10:regular
+*.font:                          Fira Sans-10:regular
 !toolbar.workspace.font:         Sans-11:Regular
 !toolbar.clock.font:             Sans-11:Regular
 !window.font:                    Sans-11:Regular
@@ -24,8 +24,8 @@
 !toolbar.iconbar.focused.font:   Sans-11:Regular
 !toolbar.iconbar.unfocused.font: Sans-11:Regular
 
-!menu.title.effect: shadow
-!menu.title.shadow.color: red
+menu.title.effect: shadow
+menu.title.shadow.color: red
 
 !TOOLBAR OPTIONS
 
@@ -33,60 +33,60 @@ toolbar:                        flat gradient vertical
 toolbar.height:                 24
 toolbar.shaped:                 false
 toolbar.bevelWidth:             1
-toolbar.borderColor:            #292928
+toolbar.borderColor:            #2E2E2E
 toolbar.borderWidth:            1
-toolbar.color:                  #3d3c3b
-toolbar.colorTo:                #3d3c3b
+toolbar.color:                  #E4E4E4
+toolbar.colorTo:                #E4E4E4
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #292928
+toolbar.clock.borderColor:      #2E2E2E
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #3d3c3b
-toolbar.clock.colorTo:          #3d3c3b
-toolbar.clock.textColor:        #D6D6D6
+toolbar.clock.color:            #E4E4E4
+toolbar.clock.colorTo:          #E4E4E4
+toolbar.clock.textColor:        #191919
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #292928
+toolbar.workspace.borderColor:  #2E2E2E
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #3d3c3b
-toolbar.workspace.colorTo:      #3d3c3b
-toolbar.workspace.textColor:    #D6D6D6
+toolbar.workspace.color:        #E4E4E4
+toolbar.workspace.colorTo:      #E4E4E4
+toolbar.workspace.textColor:    #191919
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #D6D6D6
+toolbar.button.PicColor:   #4E4E4E
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #292928
+toolbar.iconbar.borderColor:    #AAAAAA
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #3d3c3b
-toolbar.iconbar.empty.colorTo:  #3d3c3b
+toolbar.iconbar.empty.color:    #E4E4E4
+toolbar.iconbar.empty.colorTo:  #E4E4E4
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #292928
-toolbar.iconbar.focused.borderWidth:  6
-toolbar.iconbar.focused.color:        #695E55
-toolbar.iconbar.focused.colorTo:      #695E55
-toolbar.iconbar.focused.textColor:    #D6D6D6
+toolbar.iconbar.focused.borderColor:  #AAAAAA
+toolbar.iconbar.focused.borderWidth:  1
+toolbar.iconbar.focused.color:        #993A3F
+toolbar.iconbar.focused.colorTo:      #993A3F
+toolbar.iconbar.focused.textColor:    #FCFCFC
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #292928
-toolbar.iconbar.unfocused.borderWidth:  6
-toolbar.iconbar.unfocused.color:        #695E55
-toolbar.iconbar.unfocused.colorTo:      #695E55
-toolbar.iconbar.unfocused.textColor:    #D6D6D6
+toolbar.iconbar.unfocused.borderColor:  #AAAAAA
+toolbar.iconbar.unfocused.borderWidth:  1
+toolbar.iconbar.unfocused.color:        #E4E4E4
+toolbar.iconbar.unfocused.colorTo:      #E4E4E4
+toolbar.iconbar.unfocused.textColor:    #191919
 
 !WINDOW OPTIONS
 
 window.title.height:            20
-window.justify:                 Left
+window.justify:                 Center
 window.bevelWidth:              1
-window.borderColor:             #292928
+window.borderColor:             #292929
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,81 +96,81 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #695E55
-window.title.focus.colorTo:     #695E55
+window.title.focus.color:       #E4E4E4
+window.title.focus.colorTo:     #E4E4E4
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #3d3c3b
-window.title.unfocus.colorTo:   #3d3c3b
+window.title.unfocus.color:     #E4E4E4
+window.title.unfocus.colorTo:   #E4E4E4
 
-window.label.focus:             flat gradient horizontal
-window.label.focus.color:       #695E55
-window.label.focus.colorTo:     #695E55
-window.label.focus.textColor:   #D6D6D6
+window.label.focus:             flat gradient vertical
+window.label.focus.color:       #993A3F
+window.label.focus.colorTo:     #993A3F
+window.label.focus.textColor:   #FCFCFC
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #3d3c3b
-window.label.unfocus.colorTo:   #3d3c3b
-window.label.unfocus.textColor: #D6D6D6
+window.label.unfocus.color:     #E4E4E4
+window.label.unfocus.colorTo:   #E4E4E4
+window.label.unfocus.textColor: #191919
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #695E55
-window.button.focus.colorTo:    #695E55
-window.button.focus.picColor:   #D6D6D6
+window.button.focus.color:      #E4E4E4
+window.button.focus.colorTo:    #E4E4E4
+window.button.focus.picColor:   #191919
 
 window.button.pressed:          sunken
-window.button.pressed.color:    #30302F
-window.button.pressed.colorTo:  #30302F
+window.button.pressed.color:    #E3E3E3
+window.button.pressed.colorTo:  #E3E3E3
 
 window.button.unfocus:          flat gradient vertical
-window.button.unfocus.color:    #3d3c3b
-window.button.unfocus.colorTo:  #3d3c3b
-window.button.unfocus.picColor: #D6D6D6
+window.button.unfocus.color:    #E4E4E4
+window.button.unfocus.colorTo:  #E4E4E4
+window.button.unfocus.picColor: #191919
 
 window.grip.focus:              flat
-window.grip.focus.color:        #978A83
-window.grip.focus.colorTo:      #978A83
+window.grip.focus.color:        #993A3F
+window.grip.focus.colorTo:      #993A3F
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:      #292928
-window.grip.unfocus.colorTo:    #292928
+window.grip.unfocus.color:      #E4E4E4
+window.grip.unfocus.colorTo:    #E4E4E4
 
 window.handle.focus:            flat
-window.handle.focus.color:      #292928
-window.handle.focus.colorTo:    #292928
+window.handle.focus.color:      #E4E4E4
+window.handle.focus.colorTo:    #E4E4E4
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:    #292928
-window.handle.unfocus.colorTo:  #292928
+window.handle.unfocus.color:    #E4E4E4
+window.handle.unfocus.colorTo:  #E4E4E4
 
-window.handleWidth:             2
+window.handleWidth:             3
 
 !MENU OPTIONS
 
 menu.itemHeight:                18
 menu.bevelWidth:                1
-menu.borderColor:               #292928
+menu.borderColor:               #2E2E2E
 menu.borderWidth:               1
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     flat gradient diagonal
-menu.frame.color:               #3d3c3b
-menu.frame.colorTo:             #3d3c3b
-menu.frame.disableColor:        #6F9CC2
+menu.frame:                     flat
+menu.frame.color:               #E4E4E4
+menu.frame.colorTo:             #E4E4E4
+menu.frame.disableColor:        #545454
 
-menu.frame.textColor:           #D6D6D6
+menu.frame.textColor:           #191919
 menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #978A83
-menu.hilite.colorTo:            #978A83
+menu.hilite.color:              #993A3F
+menu.hilite.colorTo:            #993A3F
 menu.hilite.justify:            left
-menu.hilite.textColor:          #D6D6D6
+menu.hilite.textColor:          #FCFCFC
 
 menu.title:                     flat
-menu.title.color:               #978A83
-menu.title.colorTo:             #978A83
-menu.title.textColor:           #D6D6D6
+menu.title.color:               #D5D7E3
+menu.title.colorTo:             #D5D7E3
+menu.title.textColor:           #191919
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
