--- a/.fluxbox/styles/thrush/theme.cfg
+++ b/.fluxbox/styles/thrush/theme.cfg
@@ -7,7 +7,7 @@
 !
 !======================================================================!
 
-*font:							Ubuntu-9:light
+*font:							Orkney-10:light
 !toolbar.workspace.font:		Oxygen Mono-10.5:Regular
 !toolbar.clock.font:			Oxygen Mono-10.5:Regular
 !window.font:			<font>
@@ -41,11 +41,11 @@ toolbar.clock.justify:			Center
 !toolbar.clock.pixmap:			<filename>
 toolbar.clock.color:			#E3E3E3
 toolbar.clock.colorTo:			#DFDFDF
-toolbar.clock.textColor:		#0E0E0E
+toolbar.clock.textColor:		#131313
 
 toolbar.workspace:				flat gradient vertical
 toolbar.workspace.justify:		Center
-toolbar.workspace.textColor:		#0E0E0E
+toolbar.workspace.textColor:		#131313
 toolbar.workspace.borderColor:		#282828
 toolbar.workspace.borderWidth:		0
 toolbar.workspace.color:		#E3E3E3
@@ -81,7 +81,7 @@ toolbar.iconbar.unfocused.colorTo:	#C4C4C4
 toolbar.iconbar.unfocused.borderColor:	#DFDFDF
 toolbar.iconbar.unfocused.borderWidth:	5
 toolbar.iconbar.unfocused.justify:	Center
-toolbar.iconbar.unfocused.textColor:	#0E0E0E
+toolbar.iconbar.unfocused.textColor:	#131313
 
 window.title.height:			20
 window.bevelWidth:			1
@@ -114,7 +114,7 @@ window.label.focus.textColor:	#F6F6F6
 window.label.unfocus:			flat
 window.label.unfocus.color:		#DFDFDF
 window.label.unfocus.colorTo:		#E3E3E3
-window.label.unfocus.textColor:		#0E0E0E
+window.label.unfocus.textColor:		#131313
 !window.label.unfocus.pixmap:		unfcs.png
 
 window.button.focus:				flat
@@ -185,7 +185,7 @@ menu.frame.color:			#E3E3E3
 menu.frame.colorTo:			#E3E3E3
 menu.frame.disableColor:	#646464
 menu.frame.justify:			Left
-menu.frame.textColor:		#0E0E0E
+menu.frame.textColor:		#131313
 !menu.frame.pixmap:			<filename>
 
 menu.hilite:				sunken bevel1
@@ -199,7 +199,7 @@ menu.title:					raised
 menu.title.color:			#DFDFDF
 menu.title.colorTo:			#DFDFDF
 !menu.title.pixmap:			<filename>
-menu.title.textColor:		#0E0E0E
+menu.title.textColor:		#131313
 menu.title.justify:			Center
 menu.titleHeight:			20
 !menu.roundCorners:			<{Top|Bottom}{Left|Right}>
