--- a/.fluxbox/styles/neptune/theme.cfg
+++ b/.fluxbox/styles/neptune/theme.cfg
@@ -1,7 +1,7 @@
 !
-! fluxbox style - template
+! fluxbox style - neptune
 ! created by PackRat
-! creation date - 06-11-2018
+! creation date - 06-13-2018
 !
 ! This program is free software: you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License as published by
@@ -14,7 +14,7 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Sans-10:regular
+*.font:                          Work Sans-11:regular
 !toolbar.workspace.font:         Sans-11:Regular
 !toolbar.clock.font:             Sans-11:Regular
 !window.font:                    Sans-11:Regular
@@ -32,61 +32,61 @@
 toolbar:                        flat gradient vertical
 toolbar.height:                 24
 toolbar.shaped:                 false
-toolbar.bevelWidth:             1
-toolbar.borderColor:            #292928
+toolbar.bevelWidth:             2
+toolbar.borderColor:            #151817
 toolbar.borderWidth:            1
-toolbar.color:                  #3d3c3b
-toolbar.colorTo:                #3d3c3b
+toolbar.color:                  #313435
+toolbar.colorTo:                #131414
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #292928
+toolbar.clock.borderColor:      #151817
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #3d3c3b
-toolbar.clock.colorTo:          #3d3c3b
-toolbar.clock.textColor:        #D6D6D6
+toolbar.clock.color:            #313435
+toolbar.clock.colorTo:          #131414
+toolbar.clock.textColor:        #B9BBBB
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #292928
+toolbar.workspace.borderColor:  #151817
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #3d3c3b
-toolbar.workspace.colorTo:      #3d3c3b
-toolbar.workspace.textColor:    #D6D6D6
+toolbar.workspace.color:        #313435
+toolbar.workspace.colorTo:      #131414
+toolbar.workspace.textColor:    #B9BBBB
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #D6D6D6
+toolbar.button.PicColor:   #B9BBBB
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #292928
+toolbar.iconbar.borderColor:    #151817
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #3d3c3b
-toolbar.iconbar.empty.colorTo:  #3d3c3b
+toolbar.iconbar.empty.color:    #313435
+toolbar.iconbar.empty.colorTo:  #131414
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #292928
-toolbar.iconbar.focused.borderWidth:  6
-toolbar.iconbar.focused.color:        #695E55
-toolbar.iconbar.focused.colorTo:      #695E55
-toolbar.iconbar.focused.textColor:    #D6D6D6
+toolbar.iconbar.focused.borderColor:  #151817
+toolbar.iconbar.focused.borderWidth:  1
+toolbar.iconbar.focused.color:        #3F4F54
+toolbar.iconbar.focused.colorTo:      #1D2426
+toolbar.iconbar.focused.textColor:    #B9BBBB
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #292928
-toolbar.iconbar.unfocused.borderWidth:  6
-toolbar.iconbar.unfocused.color:        #695E55
-toolbar.iconbar.unfocused.colorTo:      #695E55
-toolbar.iconbar.unfocused.textColor:    #D6D6D6
+toolbar.iconbar.unfocused.borderColor:  #151817
+toolbar.iconbar.unfocused.borderWidth:  1
+toolbar.iconbar.unfocused.color:        #313435
+toolbar.iconbar.unfocused.colorTo:      #131414
+toolbar.iconbar.unfocused.textColor:    #B9BBBB
 
 !WINDOW OPTIONS
 
 window.title.height:            20
-window.justify:                 Left
-window.bevelWidth:              1
-window.borderColor:             #292928
+window.justify:                 Center
+window.bevelWidth:              0
+window.borderColor:             #151817
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,81 +96,81 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #695E55
-window.title.focus.colorTo:     #695E55
+window.title.focus.color:       #313435
+window.title.focus.colorTo:     #131414
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #3d3c3b
-window.title.unfocus.colorTo:   #3d3c3b
+window.title.unfocus.color:     #313435
+window.title.unfocus.colorTo:   #131414
 
-window.label.focus:             flat gradient horizontal
-window.label.focus.color:       #695E55
-window.label.focus.colorTo:     #695E55
-window.label.focus.textColor:   #D6D6D6
+window.label.focus:             flat gradient vertical
+window.label.focus.color:       #313435
+window.label.focus.colorTo:     #131414
+window.label.focus.textColor:   #B9BBBB
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #3d3c3b
-window.label.unfocus.colorTo:   #3d3c3b
-window.label.unfocus.textColor: #D6D6D6
+window.label.unfocus.color:     #313435
+window.label.unfocus.colorTo:   #131414
+window.label.unfocus.textColor: #B9BBBB
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #695E55
-window.button.focus.colorTo:    #695E55
-window.button.focus.picColor:   #D6D6D6
+window.button.focus.color:      #313435
+window.button.focus.colorTo:    #131414
+window.button.focus.picColor:   #B9BBBB
 
 window.button.pressed:          sunken
-window.button.pressed.color:    #30302F
-window.button.pressed.colorTo:  #30302F
+window.button.pressed.color:    #252728
+window.button.pressed.colorTo:  #252728
 
 window.button.unfocus:          flat gradient vertical
-window.button.unfocus.color:    #3d3c3b
-window.button.unfocus.colorTo:  #3d3c3b
-window.button.unfocus.picColor: #D6D6D6
+window.button.unfocus.color:    #313435
+window.button.unfocus.colorTo:  #131414
+window.button.unfocus.picColor: #B9BBBB
 
 window.grip.focus:              flat
-window.grip.focus.color:        #978A83
-window.grip.focus.colorTo:      #978A83
+window.grip.focus.color:        #375E87
+window.grip.focus.colorTo:      #375E87
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:      #292928
-window.grip.unfocus.colorTo:    #292928
+window.grip.unfocus.color:      #151817
+window.grip.unfocus.colorTo:    #151817
 
 window.handle.focus:            flat
-window.handle.focus.color:      #292928
-window.handle.focus.colorTo:    #292928
+window.handle.focus.color:      #151817
+window.handle.focus.colorTo:    #151817
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:    #292928
-window.handle.unfocus.colorTo:  #292928
+window.handle.unfocus.color:    #151817
+window.handle.unfocus.colorTo:  #151817
 
-window.handleWidth:             2
+window.handleWidth:             3
 
 !MENU OPTIONS
 
-menu.itemHeight:                18
+menu.itemHeight:                20
 menu.bevelWidth:                1
-menu.borderColor:               #292928
+menu.borderColor:               #151817
 menu.borderWidth:               1
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
 menu.frame:                     flat gradient diagonal
-menu.frame.color:               #3d3c3b
-menu.frame.colorTo:             #3d3c3b
+menu.frame.color:               #131414
+menu.frame.colorTo:             #131414
 menu.frame.disableColor:        #6F9CC2
 
-menu.frame.textColor:           #D6D6D6
+menu.frame.textColor:           #B9BBBB
 menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #978A83
-menu.hilite.colorTo:            #978A83
+menu.hilite.color:              #375E87
+menu.hilite.colorTo:            #375E87
 menu.hilite.justify:            left
-menu.hilite.textColor:          #D6D6D6
+menu.hilite.textColor:          #B9BBBB
 
 menu.title:                     flat
-menu.title.color:               #978A83
-menu.title.colorTo:             #978A83
-menu.title.textColor:           #D6D6D6
+menu.title.color:               #252728
+menu.title.colorTo:             #252728
+menu.title.textColor:           #B9BBBB
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
