--- a/.fluxbox/styles/pluto/theme.cfg
+++ b/.fluxbox/styles/pluto/theme.cfg
@@ -1,7 +1,7 @@
 !
-! fluxbox style - template
+! fluxbox style - pluto
 ! created by PackRat
-! creation date - 06-11-2018
+! creation date - 06-13-2018
 !
 ! This program is free software: you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License as published by
@@ -14,7 +14,7 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Sans-10:regular
+*.font:                          Work Sans-11:regular
 !toolbar.workspace.font:         Sans-11:Regular
 !toolbar.clock.font:             Sans-11:Regular
 !window.font:                    Sans-11:Regular
@@ -24,69 +24,69 @@
 !toolbar.iconbar.focused.font:   Sans-11:Regular
 !toolbar.iconbar.unfocused.font: Sans-11:Regular
 
-!menu.title.effect: shadow
-!menu.title.shadow.color: red
+menu.title.effect: shadow
+menu.title.shadow.color: red
 
 !TOOLBAR OPTIONS
 
 toolbar:                        flat gradient vertical
 toolbar.height:                 24
 toolbar.shaped:                 false
-toolbar.bevelWidth:             1
-toolbar.borderColor:            #292928
+toolbar.bevelWidth:             3
+toolbar.borderColor:            #2E2E2E
 toolbar.borderWidth:            1
-toolbar.color:                  #3d3c3b
-toolbar.colorTo:                #3d3c3b
+toolbar.color:                  #22211D
+toolbar.colorTo:                #22211D
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #292928
+toolbar.clock.borderColor:      #2E2E2E
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #3d3c3b
-toolbar.clock.colorTo:          #3d3c3b
-toolbar.clock.textColor:        #D6D6D6
+toolbar.clock.color:            #22211D
+toolbar.clock.colorTo:          #22211D
+toolbar.clock.textColor:        #D7D7D7
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #292928
+toolbar.workspace.borderColor:  #2E2E2E
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #3d3c3b
-toolbar.workspace.colorTo:      #3d3c3b
-toolbar.workspace.textColor:    #D6D6D6
+toolbar.workspace.color:        #22211D
+toolbar.workspace.colorTo:      #22211D
+toolbar.workspace.textColor:    #D7D7D7
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #D6D6D6
+toolbar.button.PicColor:   #666666
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #292928
-toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #3d3c3b
-toolbar.iconbar.empty.colorTo:  #3d3c3b
+toolbar.iconbar.borderColor:    #22211D
+toolbar.iconbar.borderWidth:    0
+toolbar.iconbar.empty.color:    #22211D
+toolbar.iconbar.empty.colorTo:  #22211D
 
-toolbar.iconbar.focused:              flat gradient vertical
+toolbar.iconbar.focused:              flat
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #292928
+toolbar.iconbar.focused.borderColor:  #22211D
 toolbar.iconbar.focused.borderWidth:  6
 toolbar.iconbar.focused.color:        #695E55
 toolbar.iconbar.focused.colorTo:      #695E55
-toolbar.iconbar.focused.textColor:    #D6D6D6
+toolbar.iconbar.focused.textColor:    #D7D7D7
 
-toolbar.iconbar.unfocused:              flat gradient vertical
+toolbar.iconbar.unfocused:              flat
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #292928
+toolbar.iconbar.unfocused.borderColor:  #22211D
 toolbar.iconbar.unfocused.borderWidth:  6
-toolbar.iconbar.unfocused.color:        #695E55
-toolbar.iconbar.unfocused.colorTo:      #695E55
-toolbar.iconbar.unfocused.textColor:    #D6D6D6
+toolbar.iconbar.unfocused.color:        #3d3c3b
+toolbar.iconbar.unfocused.colorTo:      #3d3c3b
+toolbar.iconbar.unfocused.textColor:    #D7D7D7
 
 !WINDOW OPTIONS
 
 window.title.height:            20
-window.justify:                 Left
+window.justify:                 Center
 window.bevelWidth:              1
-window.borderColor:             #292928
+window.borderColor:             #292929
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,81 +96,81 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #695E55
-window.title.focus.colorTo:     #695E55
+window.title.focus.color:       #22211D
+window.title.focus.colorTo:     #22211D
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #3d3c3b
-window.title.unfocus.colorTo:   #3d3c3b
+window.title.unfocus.color:     #22211D
+window.title.unfocus.colorTo:   #22211D
 
-window.label.focus:             flat gradient horizontal
-window.label.focus.color:       #695E55
-window.label.focus.colorTo:     #695E55
-window.label.focus.textColor:   #D6D6D6
+window.label.focus:             flat gradient vertical
+window.label.focus.color:       #22211D
+window.label.focus.colorTo:     #22211D
+window.label.focus.textColor:   #D7D7D7
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #3d3c3b
-window.label.unfocus.colorTo:   #3d3c3b
-window.label.unfocus.textColor: #D6D6D6
+window.label.unfocus.color:     #22211D
+window.label.unfocus.colorTo:   #22211D
+window.label.unfocus.textColor: #695E55
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #695E55
-window.button.focus.colorTo:    #695E55
-window.button.focus.picColor:   #D6D6D6
+window.button.focus.color:      #22211D
+window.button.focus.colorTo:    #22211D
+window.button.focus.picColor:   #D7D7D7
 
 window.button.pressed:          sunken
-window.button.pressed.color:    #30302F
-window.button.pressed.colorTo:  #30302F
+window.button.pressed.color:    #3d3c3b
+window.button.pressed.colorTo:  #3d3c3b
 
 window.button.unfocus:          flat gradient vertical
-window.button.unfocus.color:    #3d3c3b
-window.button.unfocus.colorTo:  #3d3c3b
-window.button.unfocus.picColor: #D6D6D6
+window.button.unfocus.color:    #22211D
+window.button.unfocus.colorTo:  #22211D
+window.button.unfocus.picColor: #695E55
 
 window.grip.focus:              flat
-window.grip.focus.color:        #978A83
-window.grip.focus.colorTo:      #978A83
+window.grip.focus.color:        #695E55
+window.grip.focus.colorTo:      #695E55
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:      #292928
-window.grip.unfocus.colorTo:    #292928
+window.grip.unfocus.color:      #22211D
+window.grip.unfocus.colorTo:    #22211D
 
 window.handle.focus:            flat
-window.handle.focus.color:      #292928
-window.handle.focus.colorTo:    #292928
+window.handle.focus.color:      #22211D
+window.handle.focus.colorTo:    #22211D
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:    #292928
-window.handle.unfocus.colorTo:  #292928
+window.handle.unfocus.color:    #22211D
+window.handle.unfocus.colorTo:  #22211D
 
-window.handleWidth:             2
+window.handleWidth:             3
 
 !MENU OPTIONS
 
-menu.itemHeight:                18
+menu.itemHeight:                20
 menu.bevelWidth:                1
-menu.borderColor:               #292928
-menu.borderWidth:               1
+menu.borderColor:               #22211D
+menu.borderWidth:               4
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     flat gradient diagonal
-menu.frame.color:               #3d3c3b
-menu.frame.colorTo:             #3d3c3b
-menu.frame.disableColor:        #6F9CC2
+menu.frame:                     flat
+menu.frame.color:               #22211D
+menu.frame.colorTo:             #22211D
+menu.frame.disableColor:        #6E613F
 
-menu.frame.textColor:           #D6D6D6
+menu.frame.textColor:           #695E55
 menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #978A83
-menu.hilite.colorTo:            #978A83
+menu.hilite.color:              #695E55
+menu.hilite.colorTo:            #695E55
 menu.hilite.justify:            left
-menu.hilite.textColor:          #D6D6D6
+menu.hilite.textColor:          #D7D7D7
 
 menu.title:                     flat
-menu.title.color:               #978A83
-menu.title.colorTo:             #978A83
-menu.title.textColor:           #D6D6D6
+menu.title.color:               #695E55
+menu.title.colorTo:             #695E55
+menu.title.textColor:           #D7D7D7
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
