--- a/.fluxbox/styles/neptune/theme.cfg
+++ b/.fluxbox/styles/neptune/theme.cfg
@@ -69,16 +69,16 @@ toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
 toolbar.iconbar.focused.borderColor:  #151817
 toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #3F4F54
-toolbar.iconbar.focused.colorTo:      #1D2426
+toolbar.iconbar.focused.color:        #3F4954
+toolbar.iconbar.focused.colorTo:      #1D2126
 toolbar.iconbar.focused.textColor:    #B9BBBB
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
 toolbar.iconbar.unfocused.borderColor:  #151817
 toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:        #313435
-toolbar.iconbar.unfocused.colorTo:      #131414
+toolbar.iconbar.unfocused.color:        #323435
+toolbar.iconbar.unfocused.colorTo:      #131314
 toolbar.iconbar.unfocused.textColor:    #B9BBBB
 
 !WINDOW OPTIONS
